syntax = "proto3";
package dstk;

import "common.proto";

service ShardLookup {
    rpc FindPartition (Find.Req) returns (Find.Res);
}

message Find {
    message Req {
        int64 jobId = 1;
        bytes key = 2;
    }
    message Res {
        Ex ex = 1;
        Partition par = 2;
    }
}
